minor spacing fix on pricing page

--- a/_sass/pricing/_pricing.scss
+++ b/_sass/pricing/_pricing.scss
@@ -9,6 +9,8 @@
 
         &.last-item {
             border: none;
+            margin-bottom: 0;
+            padding-bottom: 0;
         }
     }
 
